[tool.poetry]
name = "harry_potter"
description = ""

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.5"
numpy = "^1.22.0"
bar-chart-race = "^0.1.0"
nltk = "^3.6.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
